<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Workshift</string>
    <string name="title_activity_home">HomeActivity</string>

    <string name="menu_subheaher_schedule">Horarios</string>
    <string name="menu_item_calendar">Calendario</string>
    <string name="menu_subheaher_options">Opciones</string>
    <string name="menu_item_insert">Insertar mes</string>
    <string name="menu_item_personalized">Personalizar</string>
    <string name="menu_item_settings">Ajustes</string>

    <string-array name="custom_weekdays">
        <item>D</item>
        <item>L</item>
        <item>M</item>
        <item>X</item>
        <item>J</item>
        <item>V</item>
        <item>S</item>
    </string-array>

    <string-array name="custom_months">
        <item>ENE</item>
        <item>FEB</item>
        <item>MAR</item>
        <item>ABR</item>
        <item>MAY</item>
        <item>JUN</item>
        <item>JUL</item>
        <item>AGO</item>
        <item>SEP</item>
        <item>OCT</item>
        <item>NOV</item>
        <item>DIC</item>
    </string-array>

    <string-array name="full_months">
        <item>ENERO</item>
        <item>FEBRERO</item>
        <item>MARZO</item>
        <item>ABRIL</item>
        <item>MAYO</item>
        <item>JUNIO</item>
        <item>JULIO</item>
        <item>AGOSTO</item>
        <item>SEPTIEMBRE</item>
        <item>OCTUBRE</item>
        <item>NOVIEMBRE</item>
        <item>DICIEMBRE</item>
    </string-array>

    <string-array name="turns_names_cap">
        <item>-</item>
        <item>M</item>
        <item>T</item>
        <item>-</item>
        <item>N</item>
        <item>-</item>
        <item>-</item>
        <item>L</item>
        <item>S</item>
        <item>V</item>
        <item>F</item>
    </string-array>

    <string-array name="turns_names_simple">
        <item>Mañana</item>
        <item>Tarde</item>
        <item>Noche</item>
        <item>Libre</item>
        <item>Saliente</item>
        <item>Vacaciones</item>
        <item>Festivo</item>
    </string-array>

    <string-array name="turns_names_double">
        <item>Mañana</item>
        <item>Tarde</item>
        <item>Noche</item>
    </string-array>

    <string-array name="turns_names">
        <item>-</item>
        <item>Mañana</item>
        <item>Tarde</item>
        <item>Mañana y Tarde</item>
        <item>Noche</item>
        <item>Mañana y Noche</item>
        <item>Tarde y Noche</item>
        <item>Libre</item>
        <item>Saliente</item>
        <item>Vacaciones</item>
        <item>Festivo</item>
    </string-array>

    <string name="morning">Mañana</string>
    <string name="afternoon">Tarde</string>
    <string name="evening">Noche</string>
    <string name="unoccupied">Libre</string>
    <string name="outgoing">Saliente</string>
    <string name="holiday">Vacaciones</string>
    <string name="festive">Festivo</string>

    <string name="add_comment">Añadir comentario</string>
    <string name="add_turn">Añadir turno</string>
    <string name="change_turn">Cambiar turno</string>

    <string name="year_create_turns">Seleccione el año</string>
    <string name="month_create_turns">Seleccione el mes</string>
    <string name="sequence_create_turns">Inserte la secuencia de turnos\nejemplo: MMTTNSL...</string>
    <string name="add_turns_help">Ayuda</string>

    <string name="agree">Aceptar</string>
    <string name="title_help">Ayuda</string>
    <string name="content_help_create_turns">Para insertar los turnos de un mes es necesario indicar la inicial del turno deseado\nPor ejemplo: <b>M indica Mañana</b> \nPor otro lado, se inserta una secuencia de caracteres sin espacios con dichas iniciales\nDe esta manera el caracter de la 4ª posición indicará el turno para el día 4 de ese mes.\nPor ejemplo: <b>MMTN...</b> indica que el día 1 y 2 está de MAÑANA, el 3 de TARDE, el 4 de NOCHE, y así con todos los días de ese mes.</string>
    <string name="add_turns_save">Guardar</string>
    <string name="loadData">Cargando datos ...</string>
    <string name="change_select_turn">Seleccione un turno</string>
    <string name="change_not_turn">No se ha definido el turno para esta fecha</string>
    <string name="turn">"Turno: "</string>
    <string name="disagree">Cancelar</string>
    <string name="load_detail">Cargando datos ...</string>
    <string name="double_turn">Añadir un turno</string>
    <string name="not_double_change">No se puede añadir un doblaje.\n\nSolamente es posible para los turnos de:\nMANAÑA, TARDE y NOCHE</string>
    <string name="turn_add_comment">Añadir un comentario</string>
    <string name="delete_change_turn">¿Está seguro de que desea eliminar este cambio?\nEsto provocará que se vuelva al turno que estaba antes de realizar el cambio y se eliminen los posibles doblajes que existan</string>
    <string name="delete_change_turn_title">Eliminar cambio de turno</string>
    <string name="info_delete_change_for_remove_title">Cambio no válido</string>
    <string name="info_delete_change_for_remove">Ya existe un cambio o no se ha definido el turno.\n\nPara poder realizar otro cambio es necesario que elimine el actual.</string>
    <string name="info_delete_double_for_remove_title">Doblaje no válido</string>
    <string name="info_delete_double_for_remove">No se puede realizar más de un doblaje por día\n\nPara cambiar el turn del doblaje primero debe eliminar el actual.</string>
    <string name="delete_double_turn">¿Está seguro de que desea eliminar este doblaje?</string>
    <string name="delete_double_turn_title">Eliminar turno doble</string>
    <string name="delete_comment">¿Está seguro de que desea eliminar el comentario?</string>
    <string name="delete_comment_title">Eliminar comentario</string>
    <string name="info_delete_double_not_valid">No se puede realizar un doblaje de un turno que no sea: <b>Mañana, Tarde o Noche</b></string>
    <string name="select_color_title">Seleccione un nuevo color</string>
    <string name="select_color_used">Este color está siendo usado, seleccione uno que no esté en uso.</string>
    <string name="select_color_generated">Los colores de los turnos compuestos se generan a partir de los simples.</string>
    <string name="email">Email</string>
    <string name="password">Contraseña</string>
    <string name="login">Acceder</string>
    <string name="create_account">Crear una cuenta</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="register_account">Crear una cuenta</string>
    <string name="welcome_register">Bienvenido al registro de WorkShift</string>
    <string name="last_name">Apellidos</string>
    <string name="name">Nombre</string>
    <string name="register">Registrarse</string>
    <string name="return_home">Volver al inicio</string>
    <string name="menu_item_close">Cerrar sesión</string>
    <string name="loading">Cargando</string>
    <string name="error_login_password">El email y la contraseña no coinciden</string>
    <string name="error_login_timeout">Ha habido un error en la conexión, por favor inténtelo de nuevo</string>
    <string name="menu_item_update">Sincronizar</string>


</resources>
