<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="@color/custom_blue"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/scrollView3"
        android:fillViewport="true"
        android:layout_margin="20dp">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:gravity="center_vertical|center_horizontal"
            android:padding="20dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageView"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/ic_launcher" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/editText_email"
                android:layout_gravity="center_horizontal"
                android:hint="@string/email"
                android:layout_marginTop="30dp"
                android:focusable="true"
                android:singleLine="true"
                android:selectAllOnFocus="false"
                android:inputType="textEmailAddress" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/editText_password"
                android:layout_gravity="center_horizontal"
                android:hint="@string/password"
                android:focusable="true" />

            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:id="@+id/button_login"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="15dp" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/register_account"
                android:id="@+id/textView_register"
                android:layout_gravity="center_horizontal"
                android:clickable="true"
                android:layout_marginTop="30dp"
                android:gravity="center_horizontal"
                android:padding="10dp" />

        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical|center_horizontal"
        android:id="@+id/layout_loading"
        android:orientation="vertical"
        android:background="#B4000000"
        android:visibility="gone"
        android:clickable="true">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/loading"
            android:id="@+id/textView2"
            android:gravity="center"
            android:textColor="@color/md_white" />

        <pl.droidsonroids.gif.GifImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/preloader"
            android:id="@+id/preloading" />
    </LinearLayout>
</RelativeLayout>
