<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/md_white">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView4"
        android:layout_gravity="right"
        android:fillViewport="true"
        android:layout_margin="10dp">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" >

                    <ImageButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/imageButton_addYear"
                        android:src="@drawable/ic_action_add" />

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:id="@+id/textView_addYear"
                        android:clickable="true"
                        android:hint="@string/year_create_turns"
                        android:layout_row="0"
                        android:layout_column="0"
                        android:layout_columnWeight="1"
                        android:gravity="center_vertical|center_horizontal"
                        android:textColorHint="@color/md_grey_600"
                        android:textColor="@color/md_grey_900" />

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/imageButton_addMonth"
                        android:src="@drawable/ic_action_add" />

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:id="@+id/textView_addMonth"
                        android:layout_gravity="fill_horizontal|center_horizontal"
                        android:clickable="true"
                        android:hint="@string/month_create_turns"
                        android:gravity="center_vertical|center_horizontal"
                        android:layout_column="1"
                        android:layout_row="0"
                        android:layout_columnWeight="1"
                        android:textColorHint="@color/md_grey_600"
                        android:textColor="@color/md_grey_900" />

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp">

                <EditText
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textCapCharacters|textMultiLine"
                    android:ems="10"
                    android:id="@+id/ed_sequence"
                    android:scrollHorizontally="false"
                    android:hint="@string/sequence_create_turns"
                    android:gravity="top"
                    android:minLines="3"
                    android:maxLength="31"
                    android:textColor="@color/md_grey_900"
                    android:textColorHint="@color/md_grey_600"
                    android:layout_marginTop="15dp" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_action_save"
        android:id="@+id/ib_save"
        android:layout_alignParentBottom="true"
        android:layout_margin="10dp" />

</RelativeLayout>